Set up app.js, made additions to data file, and the pug templates about and index.

--- a/static_node_and_express_site-v1/views/about.pug
+++ b/static_node_and_express_site-v1/views/about.pug
@@ -8,35 +8,40 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 John Layher
 
         //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
+          | Full Stack JavaScript Developer, Musician, Producer, and Creator of Bad Puns That Not Even My Family Will Laugh At
 
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I make music, and occasionally I make jokes that people feel obliged to chuckle at.   
+            | I am in the process of learning to code.  
+            | Also, my mom says I'm a pretty cool guy, and she's a trustworthy source.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
+          li JavaScript
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li Pug
+          li HTML
+          li CSS
+          li NPM
+          li Mac OS
+          li Logic Pro  
+          li Izotope's Ozone
+          li Reason (Production Software)
+          li Native Instruments Audio Units/VSTs
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 706-621-3912
+          li john.e.layher@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
         a.button.expanded(href='') LinkedIn
