--- a/static_node_and_express_site-v1/views/about.pug
+++ b/static_node_and_express_site-v1/views/about.pug
@@ -26,6 +26,8 @@ block content
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
           li JavaScript
+          li AJAX
+          li Fetch API
           li Express
           li Pug
           li HTML
@@ -40,13 +42,13 @@ block content
 
         //- Add your own contact info
         ul
-          li 706-621-3912
-          li john.e.layher@gmail.com
+          li 000-000-0000
+          li contact-email@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='NOPE!!!') LinkedIn
+        a.button.expanded(href='https://github.com/jlayher') GitHub
+        a.button.expanded(href='NEVER!!!') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
