--- a/static_node_and_express_site-v1/views/project.pug
+++ b/static_node_and_express_site-v1/views/project.pug
@@ -11,23 +11,21 @@ block content
         h1= `${project.project_name}`
 
         //- Use interpolation to dynamically add the project description.
-        p.lead.text-light
-          | Description
+        p.lead.text-light=`${project.description}`
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
 
         //- Use an `each` iterator to replace the li tags below and interpolation to dynamically add the technologies used in each project.
         ul
-          li HTML
-          li CSS
-          li JavaScript
+          each tech in project.technologies
+            li= tech
 
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
         a.button.expanded(href='') Live Demo
         a.button.expanded(href='') GitHub Repo
     
     //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
+    each url in project.image_urls
+        img.image(src=`${url}` width='1200' height='550')
+    
