Images Now Working in Pug Templates, and More info in Templates filled in

--- a/static_node_and_express_site-v1/views/layout.pug
+++ b/static_node_and_express_site-v1/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src=`/static/images/profile-image-001.jpeg`)
           .cell.auto
 
             //- Add your name here.
@@ -33,7 +33,7 @@ html(class="no-js" lang="en" dir="ltr")
           button.menu-icon(type='button', data-toggle='my-info')
 
           //- Add your name here.  This is for the mobile screen sized version.
-          span.title-bar-title Name
+          span.title-bar-title John Layher
       block content
         
 
