--- a/static_node_and_express_site-v1/views/project.pug
+++ b/static_node_and_express_site-v1/views/project.pug
@@ -22,6 +22,8 @@ block content
             li= tech
 
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
+
+          // ADD HREF VALUE FOR THE LIVE DEMO
         a.button.expanded(href='') Live Demo
         a.button.expanded(href=`${project.github_link}`) GitHub Repo
     
