Cleaned up Pug files and added links

--- a/static_node_and_express_site-v1/views/error.pug
+++ b/static_node_and_express_site-v1/views/error.pug
@@ -5,7 +5,9 @@ block content
         h2 Oh man...  A Server Error Just Occured 
         
         h5 Please Navigate Back To The Home Page With The Link Below :D
-
+        br
+        //-Added Error Stack 
+        span= err.stack
         br
         br
         br
