--- a/static_node_and_express_site-v1/views/page-not-found.pug
+++ b/static_node_and_express_site-v1/views/page-not-found.pug
@@ -5,7 +5,9 @@ block content
         h2 Looks Like This Page Doesn't Exist!  
         
         h5 Please Navigate Back To The Home Page With The Link Below :D
-
+        br
+        //-Added Error Stack 
+        span= err.stack
         br
         br
         br
