--- a/static_node_and_express_site-v1/views/about.pug
+++ b/static_node_and_express_site-v1/views/about.pug
@@ -46,9 +46,9 @@ block content
           li contact-email@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='NOPE!!!') LinkedIn
+        a.button.expanded(href='https://www.linkedin.com') LinkedIn
         a.button.expanded(href='https://github.com/jlayher') GitHub
-        a.button.expanded(href='NEVER!!!') Twitter
+        a.button.expanded(href='https://twitter.com/') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
