--- a/static_node_and_express_site-v1/views/project.pug
+++ b/static_node_and_express_site-v1/views/project.pug
@@ -24,7 +24,7 @@ block content
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
 
           // ADD HREF VALUE FOR THE LIVE DEMO
-        a.button.expanded(href='') Live Demo
+        a.button.expanded(href=`${project.live_link}`) Live Demo
         a.button.expanded(href=`${project.github_link}`) GitHub Repo
     
     //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
