--- a/static_node_and_express_site-v1/views/error.pug
+++ b/static_node_and_express_site-v1/views/error.pug
@@ -11,8 +11,5 @@ block content
         br
         br
         br
-             //- Ex Credit:  Styled Retrun Link 
-        a.button(
-            style={color: 'blue', background: 'slategrey', display: 'block', align: 'center', height: '50px'}
-            href=`/` 
-            ) Back To The Home Page!
+             //- Ex Credit:  Styled Return Link 
+        a.button.return-link(href=`/`) Back To The Home Page!
