--- a/static_node_and_express_site-v1/views/page-not-found.pug
+++ b/static_node_and_express_site-v1/views/page-not-found.pug
@@ -6,13 +6,12 @@ block content
         
         h5 Please Navigate Back To The Home Page With The Link Below :D
         br
-        //-Added Error Stack 
-        span= err.stack
+        //-Added Error Stack and the ".stack" class
+        span.stack= err.stack
         br
         br
         br
-            //- Ex Credit:  Styled Retrun Link 
-            //- Ex Credit:  Styled Return Link 
+            //- Ex Credit: Styled Return Link 
         a.button.return-link(href=`/`) Back To The Home Page!
 
         
