--- a/static_node_and_express_site-v1/views/index.pug
+++ b/static_node_and_express_site-v1/views/index.pug
@@ -5,7 +5,8 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 John Layher's Portfolio
+      //-Exceeds Expectations Req.  Added "light-shadows" class.
+      h1.light-shadows John Layher's Portfolio
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
       p.lead.text-light
