--- a/static_node_and_express_site-v1/views/about.pug
+++ b/static_node_and_express_site-v1/views/about.pug
@@ -7,14 +7,14 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
+        //- My name
         h1 John Layher
 
-        //- Feel free personalize the title below
+        //- Title Section
         p.lead.text-light
           | Full Stack JavaScript Developer, Musician, Producer, and Creator of Bad Puns That Not Even My Family Will Laugh At
 
-        //- Replace the boilerplate below with your Elevator pitch below.
+        //- Bio
         .portfolio-bio
           p
             | I make music, and occasionally I make jokes that people feel obliged to chuckle at.   
@@ -23,7 +23,7 @@ block content
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
+        //- List of Skills
         ul
           li JavaScript
           li AJAX
@@ -40,12 +40,12 @@ block content
           li Native Instruments Audio Units/VSTs
         h6 Contact Info
 
-        //- Add your own contact info
+        //- Contact Info
         ul
           li 000-000-0000
           li contact-email@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
+        //- Social Media Links
         a.button.expanded(href='https://www.linkedin.com') LinkedIn
         a.button.expanded(href='https://github.com/jlayher') GitHub
         a.button.expanded(href='https://twitter.com/') Twitter
