--- a/static_node_and_express_site-v1/views/layout.pug
+++ b/static_node_and_express_site-v1/views/layout.pug
@@ -17,14 +17,14 @@ html(class="no-js" lang="en" dir="ltr")
             img.thumbnail(src=`/static/images/profile-image-001.jpeg`)
           .cell.auto
 
-            //- Add your name here.
+            //- Name for sidebar 
             h5 John Layher
 
-            //- Add text here to describe who you are, what you do, and why you are so awesome.
+            //- Side Bar Description 
             p.text-light
               |Musician, Producer, Foley Artist, and Aspiring Full-Stack Web Developer
 
-            //- Add about page route to the href below. 
+            //- Link To About Page 
             a(href='../about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
@@ -32,11 +32,9 @@ html(class="no-js" lang="en" dir="ltr")
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
 
-          //- Add your name here.  This is for the mobile screen sized version.
+          //- Name for Mobile View
           span.title-bar-title John Layher
       block content
-        
-
       
   script(src='/static/js/vendor/jquery.js')
   script(src='/static/js/vendor/what-input.js')
