--- a/static_node_and_express_site-v1/views/page-not-found.pug
+++ b/static_node_and_express_site-v1/views/page-not-found.pug
@@ -1,17 +1,19 @@
 extends layout.pug
 
 block content 
+    //-Create Div with ".error" Class
     .error 
-        h2 Looks Like This Page Doesn't Exist!  
+        //-Create Elements to Display Error Messages, and Add the "err-title-margins" Class
+        h2.err-title-margins Looks Like This Page Doesn't Exist!  
         
-        h5 Please Navigate Back To The Home Page With The Link Below :D
+        h5.err-title-margins Please Navigate Back To The Home Page With The Link Below :D
         br
-        //-Added Error Stack and the ".stack" class
+        //-Added Error Stack With ".stack" Class
         span.stack= err.stack
         br
         br
         br
-            //- Ex Credit: Styled Return Link 
+        //- Style Return Link With the "return-link" Class
         a.button.return-link(href=`/`) Back To The Home Page!
 
         
