--- a/static_node_and_express_site-v1/views/index.pug
+++ b/static_node_and_express_site-v1/views/index.pug
@@ -3,33 +3,19 @@ extends layout.pug
 block content 
   article.grid-container.portfolio-intro
     div
-
-      //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      //-Exceeds Expectations Req.  Added "light-shadows" class.
+      //-Added "light-shadows" class
       h1.light-shadows John Layher's Portfolio
 
-      //- Add a description for your portfolio, what this project is, it's purpose, what it's supposed to accomplish, etc. 
+      //- Portfolio Description
       p.lead.text-light
         | A collection of JavaScript Projects
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
 
-      //- Use the Pug `each` iterator to create a project img, title and link in the markup for each of the projects you are showcasing.  
+      //- Generate Project Images and Links 
       each project in projects  
         .cell
           a(href=`./project/${project.id}`)
             img.thumbnail(src= `${project.image_urls[0]}.png`)
             h5= `${project.project_name}`
-
-         
-      //- TAKE OUT WHAT IS BELOW AFTER DOUBLE CHECKING CODE
-
-      //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
-      //- Here's what the Pug for each project example should look like. 
-      
-        .cell
-          a(href='#')
-            img.thumbnail(src='https://placehold.it/550x550')
-            h5 Title
-      
