--- a/static_node_and_express_site-v1/views/project.pug
+++ b/static_node_and_express_site-v1/views/project.pug
@@ -7,25 +7,25 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Use interpolation to dynamically add the project title.
+        //- Show Project Title
         h1 #{project.project_name}
 
-        //- Use interpolation to dynamically add the project description.
+        //- Show Project Description 
         p.lead.text-light #{project.description}
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
 
-        //- Use an `each` iterator to replace the li tags below and interpolation to dynamically add the technologies used in each project.
+        //- Add List of Technologies
         ul
           each tech in project.technologies
             li= tech
 
-        //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
+        //- Links to Live Demo and GitHub Repo
         a.button.expanded(href=`${project.live_link}`, target='_blank') Live Demo
         a.button.expanded(href=`${project.github_link}`, target='_blank') GitHub Repo
     
-    //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential employers will like to see. 
+    //- Display Project Images 
     each url in project.image_urls
         img.image(src=`${url}.png` width='1200' height='550')
     
