--- a/views/about.pug
+++ b/views/about.pug
@@ -46,9 +46,9 @@ block content
           li contact-email@gmail.com
 
         //- Social Media Links
-        a.button.expanded(href='https://www.linkedin.com') LinkedIn
-        a.button.expanded(href='https://github.com/jlayher') GitHub
-        a.button.expanded(href='https://twitter.com/') Twitter
+        a.button.expanded(href='https://www.linkedin.com', target='_blank') LinkedIn
+        a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
+        a.button.expanded(href='https://twitter.com/', target='_blank') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
