--- a/views/index.pug
+++ b/views/index.pug
@@ -3,12 +3,12 @@ extends layout.pug
 block content 
   article.grid-container.portfolio-intro
     div
-      //-Added "light-shadows" class
+      //-Added "light-shadows" class to my name at the top of the home page
       h1.light-shadows John Layher's Portfolio
 
       //- Portfolio Description
       p.lead.text-light
-        | A collection of JavaScript Projects
+        | A collection of JavaScript Projects that I intend to expand upon greatly!
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
