Fixed live links and updated text

--- a/views/about.pug
+++ b/views/about.pug
@@ -42,13 +42,13 @@ block content
 
         //- Contact Info
         ul
-          li 000-000-0000
-          li contact-email@gmail.com
+          li 706-621-3912
+          li john.e.layher@gmail.com
 
         //- Social Media Links
         a.button.expanded(href='https://www.linkedin.com', target='_blank') LinkedIn
         a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
-        a.button.expanded(href='https://twitter.com/', target='_blank') Twitter
+
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
