--- a/views/project.pug
+++ b/views/project.pug
@@ -22,7 +22,8 @@ block content
             li= tech
 
         //- Links to Live Demo and GitHub Repo
-        a.button.expanded(href=`${project.live_link}`, target='_blank') Live Demo
+        if project.live_link !== "null"
+          a.button.expanded(href=`${project.live_link}`, target='_blank') Live Demo
         a.button.expanded(href=`${project.github_link}`, target='_blank') GitHub Repo
     
     //- Display Project Images 
