--- a/views/about.pug
+++ b/views/about.pug
@@ -12,41 +12,55 @@ block content
 
         //- Title Section
         p.lead.text-light
-          | Full Stack JavaScript Developer, Musician, Producer, and Creator of Bad Puns That Not Even My Family Will Laugh At
+          | Full Stack JavaScript developer with a passion for creative problem solving, communication, and life-long learning.
 
         //- Bio
         .portfolio-bio
           p
-            | I make music, and occasionally I make jokes that people feel obliged to chuckle at.   
-            | I am in the process of learning to code.  
-            | Also, my mom says I'm a pretty cool guy, and she's a trustworthy source.
+            | I am a full stack JavaScript developer with expertise in creating intuitive and reliable websites, and have a passion for creative technologies.  
+            br
+            br  
+            | I graduated from Elon University with a Bachelor’s degree in Philosophy, and a minor in Biology.  Initially intending to pursue Medical/IT Law, I found that my passions lie in the creative and innovative aspects of technology.  Since, I have earned a Full Stack JavaScript TechDegree from TeamTreeHouse, and have continued to further my learning through online resources, and collaborations with friends.
+            br
+            br
+            | In my free time, I love audio engineering, cooking, hopelessly trying to get my friends interested in discussing philosophy, and playing with my beautiful dog, Callie!
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- List of Skills
         ul
           li JavaScript
-          li AJAX
-          li Fetch API
-          li Express
-          li Pug
+          li React 
+          li React Router 
           li HTML
           li CSS
+          li JSX
+          li Express 
+          li Node.js 
+          li Axios
+          li Fetch API
+          li Pug/Jade
+          li SQL 
+          li Sequelize 
+          li SQLite
+          li jQuery 
+          li REST APIs 
+          li AJAX 
+          li OOP 
           li NPM
-          li Mac OS
-          li Logic Pro  
-          li Izotope's Ozone
-          li Reason (Production Software)
-          li Native Instruments Audio Units/VSTs
-        h6 Contact Info
+          li HTTP 
+          li POSTMAN 
+          li Git/GitHub
+          li AGILE Development (SCRUM)
 
+        br
+        h6 Contact me
         //- Contact Info
         ul
-          li 706-621-3912
           li john.e.layher@gmail.com
-
+        br
         //- Social Media Links
-        a.button.expanded(href='https://www.linkedin.com', target='_blank') LinkedIn
+        a.button.expanded(href='https://www.linkedin.com/in/john-e-layher/', target='_blank') LinkedIn
         a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
 
   nav.grid-container.portfolio-breadcrumb
