--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html(class="no-js" lang="en" dir="ltr")
 
             //- Side Bar Description 
             p.text-light
-              |Musician, Producer, Foley Artist, and Aspiring Full-Stack Web Developer
+              |Full Stack Web Developer
 
             //- Link To About Page 
             a(href='../about') Learn More →
