--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src=`/static/images/profile-image-001.jpeg`)
+            img.thumbnail(src=`/static/images/IMG_7660.JPG`)
           .cell.auto
 
             //- Name for sidebar 
