Changed Title and Added Contact Links

--- a/views/about.pug
+++ b/views/about.pug
@@ -58,10 +58,14 @@ block content
         //- Contact Info
         ul
           li john.e.layher@gmail.com
-        br
+          li 706-621-3912
+        //- Email Button
+        a.button.expanded(href='mailto: john.e.layher@gmail.com') Email   
         //- Social Media Links
         a.button.expanded(href='https://www.linkedin.com/in/john-e-layher/', target='_blank') LinkedIn
         a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
+        //- Download Resume
+        a.button.expanded(href='static/downloads/Resume_6-15-21.pdf' download='john_layher_resume') Resume 
 
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
