--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block content
 
       //- Portfolio Description
       p.lead.text-light
-        | My Portfolio of JavaScript Web Applications 
+        | Portfolio of JavaScript Web Applications 
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
