Updated Readme and some code comments

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,11 +13,12 @@ html(class="no-js" lang="en" dir="ltr")
       .grid-y.grid-padding-x(style='height: 100%;')
         block sidebar
           br
+          //- Side Bar Image
           .cell.shrink
-            img.thumbnail(src=`/static/images/IMG_7660.JPG`)
+            img.thumbnail(src=`static/images/profile-image-001.jpeg`)
           .cell.auto
 
-            //- Name for sidebar 
+            //- Name
             h5 John Layher
 
             //- Side Bar Description 
