Added code to get image to appear on linked in

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,6 +8,11 @@ html(class="no-js" lang="en" dir="ltr")
     link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
     link(rel='stylesheet', href='/static/css/foundation.css')
     link(rel='stylesheet', href='/static/css/style.css')
+    <meta name="description" content="John Layher's JavaScript Portfolio" />
+    <meta name="title" property="og:title" content="John Layher's JavaScript Portfolio" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://flic.kr/p/2mea3ui" />
+    <meta name="description" property="og:description" content="JavaScript Portfolio" /><meta name="author" content="John Layher" />
   body
     #my-info.off-canvas.position-left.reveal-for-large.portfolio-me(data-off-canvas='')
       .grid-y.grid-padding-x(style='height: 100%;')
@@ -15,7 +20,7 @@ html(class="no-js" lang="en" dir="ltr")
           br
           //- Side Bar Image
           .cell.shrink
-            img.thumbnail(src=`/static/images/profile-image-001.jpeg`)
+            img.thumbnail(src=`/static/images/IMG_7660.JPG`)
           .cell.auto
 
             //- Name
