changed image url

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html(class="no-js" lang="en" dir="ltr")
     <meta name="description" content="John Layher's JavaScript Portfolio" />
     <meta name="title" property="og:title" content="John Layher's JavaScript Portfolio" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://flic.kr/p/2mea3ui" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51344706729_7002c0297f_b.jpg" />
     <meta name="description" property="og:description" content="JavaScript Portfolio" /><meta name="author" content="John Layher" />
   body
     #my-info.off-canvas.position-left.reveal-for-large.portfolio-me(data-off-canvas='')
