--- a/views/about.pug
+++ b/views/about.pug
@@ -12,12 +12,12 @@ block content
 
         //- Title Section
         p.lead.text-light
-          | Full Stack JavaScript developer with a passion for creative problem solving, communication, and life-long learning.
+          | React.js Developer, Full-Stack JavaScript Developer, and Front-End Web Developer with a passion for creative problem solving, communication, and life-long learning.
 
         //- Bio
         .portfolio-bio
           p
-            | I am a full stack JavaScript developer with expertise in creating intuitive and reliable websites, and have a passion for creative technologies.  
+            | I am a React.js Developer, Full-Stack JavaScript Developer, and Front-End Web Developer with expertise in creating intuitive and reliable websites, and have a passion for creative technologies.  
             br
             br  
             | I graduated from Elon University with a Bachelor’s degree in Philosophy, and a minor in Biology.  Initially intending to pursue Medical/IT Law, I found that my passions lie in the creative and innovative aspects of technology.  Since, I have earned a Full Stack JavaScript TechDegree from TeamTreeHouse, and have continued to further my learning through online resources, and collaborations with friends.
