Changed Resume Download

--- a/views/about.pug
+++ b/views/about.pug
@@ -12,15 +12,15 @@ block content
 
         //- Title Section
         p.lead.text-light
-          | React.js Developer, Full-Stack JavaScript Developer, and Front-End Web Developer with a passion for creative problem solving, communication, and life-long learning.
+          | React.js Developer, Software Engineer, Full-Stack JavaScript Developer, and UI/UX Developer with a passion for creative problem solving, communication, and life-long learning.
 
         //- Bio
         .portfolio-bio
           p
-            | I am a React.js Developer, Full-Stack JavaScript Developer, and Front-End Web Developer with expertise in creating intuitive and reliable websites, and have a passion for creative technologies.  
+            | I am a React.js Developer, Software Engineer, Full-Stack JavaScript Developer, and UI/UX Developer with expertise in creating intuitive and reliable websites, and a passion for creative technologies.  
             br
             br  
-            | I graduated from Elon University with a Bachelor’s degree in Philosophy, and a minor in Biology.  Initially intending to pursue Medical/IT Law, I found that my passions lie in the creative and innovative aspects of technology.  Since, I have earned a Full Stack JavaScript TechDegree from TeamTreeHouse, and have continued to further my learning through online resources, and collaborations with friends.
+            | I graduated from Elon University with a Bachelor’s degree in Philosophy, and a minor in Biology.  Initially intending to pursue Medical/IT Law, I found that my passions lie in the creative and innovative aspects of technology.  Since, I have earned a Full-Stack JavaScript TechDegree from TeamTreeHouse, and have continued to further my learning through online resources, and collaborations with friends.
             br
             br
             | In my free time, I love audio engineering, cooking, hopelessly trying to get my friends interested in discussing philosophy, and playing with my beautiful dog, Callie!
@@ -65,7 +65,7 @@ block content
         a.button.expanded(href='https://www.linkedin.com/in/john-e-layher/', target='_blank') LinkedIn
         a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
         //- Download Resume
-        a.button.expanded(href='static/downloads/Resume_7-30-21.pdf' download='john_layher_resume') Resume 
+        a.button.expanded(href='static/downloads/john_layher_resume.docx' download='john_layher_resume') Resume 
 
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
