Changed Resume in about

--- a/views/about.pug
+++ b/views/about.pug
@@ -65,7 +65,7 @@ block content
         a.button.expanded(href='https://www.linkedin.com/in/john-e-layher/', target='_blank') LinkedIn
         a.button.expanded(href='https://github.com/jlayher', target='_blank') GitHub
         //- Download Resume
-        a.button.expanded(href='static/downloads/john_layher_resume.docx' download='john_layher_resume') Resume 
+        a.button.expanded(href='static/downloads/john_layher_resume.pdf' download='john_layher_resume') Resume 
 
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
